test/compilable/extra-files/pkg_import3b/package.d
module pkg_import3b;

int foo() { return 1; }
int bar() { return 2; }

int mod;
